# my-dapp

./: README.md  package-lock.json  package.json
apps/web/: .env.example  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ActivityFeed.tsx  AnimatedBackground.tsx  ConfettiEffect.tsx  NFTCard.tsx  NFTGallery.tsx
apps/web/src/lib/erc721-stylus/: README.md  package.json  tsconfig.json
apps/web/src/lib/erc721-stylus/components/: ERC721NFTPanel.tsx
apps/web/src/lib/erc721-stylus/lib/: erc721-nft.ts
apps/web/src/lib/erc721-stylus/src/: ERC721InteractionPanel.tsx  Select.tsx  abi.ts  constants.ts  deployment.ts  index.ts  interactions.ts  types.ts
apps/web/src/lib/erc721-stylus/src/hooks/: index.ts  useERC721Deploy.ts  useERC721Interactions.ts
apps/web/src/lib/wallet-auth/: README.md  package.json  tsconfig.json
apps/web/src/lib/wallet-auth/src/: constants.ts  index.ts  types.ts
apps/web/src/lib/wallet-auth/src/hooks/: index.ts
contracts/cached-contract/: Cargo.toml
contracts/cached-contract/src/: lib.rs
contracts/erc721/src/: erc721.rs  lib.rs
docs/: RADAR_SECURITY_ANALYSIS.md  SMARTCACHE_USAGE.md  erc721-nft.md
docs/frontend/: README.md
scripts/: deploy-erc721.ts  deploy-mainnet.sh  deploy-sepolia.sh  install-radar.sh  run-radar.sh
